# lab_6

./: CMakeLists.txt  Отчёт ЛР6 Кочкин В.Р. Фиб-3301.docx
task_1/: main  main.cpp
task_2/: main  main.cpp
task_3/: main  main.cpp
task_4/: main  main.cpp
task_5/: main  main.cpp
task_6/: main  main.cpp
